--- a/deployment.yml
+++ b/deployment.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nodejs
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: nodejs
@@ -15,7 +15,7 @@ spec:
         app: nodejs
     spec:
       containers:
-        - name: node-project
+        - name: nodejs
           image: cyrinesendesni/node_project:cyrine
           ports:
             - containerPort: 3005
