--- a/deployment.yml
+++ b/deployment.yml
@@ -1,22 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: node-project
+  name: nodejs-deployment
   labels:
-    app: nodejs
+    app: nodeapp
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: nodejs
+      app: nodeapp
   template:
     metadata:
       labels:
-        app: nodejs
+        app: nodeapp
     spec:
       containers:
-        - name: nodejs
-          image: cyrinesendesni/node_project:cyrine
-          ports:
-            - containerPort: 3005
-         
+      - name: nodeapp
+        image: cyrinesendesni/node_project:cyrine
+        imagePullPolicy: Always 
+        ports:
+        - containerPort: 3005
+       
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nodejs-service
+  labels:
+    app: nodeapp
+spec:
+  type: NodePort
+  ports:
+  - port: 8000
+    protocol: TCP
+    targetPort: 3005
+    nodePort: 30000
+  selector:
+    app: nodeapp
